<resources>

    <!--共用 -->
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="app_name">Keeper</string>
    <string name="commit">提交</string>
    <string name="info">资料</string>
    <string name="modify">修改</string>
    <string name="loading">请稍后</string>
    <string name="addSucceed">添加成功</string>
    <string name="infoLoadFaild">信息加载失败</string>
    <string name="serverconnecterror">服务器连接异常</string>
    <string name="pullsucceed">上传成功</string>

    <!--main_keeper -->
    <string name="tab_one">消息中心</string>
    <string name="tab_two">个人中心</string>
    <string name="tab_three">系统设置</string>
    <string name="search">请输入搜索内容</string>
    <string name="ecgmonitor">心电监测</string>
    <string name="ecgmonitorDescribe">连接设备后检测心电图</string>
    <string name="healthyRecord">健康档案</string>
    <string name="healthyRecordDescribe">记录历史心电测试记录</string>
    <string name="treatment_followup">诊后随访</string>
    <string name="treatment_followup_describe">出院后跟踪治疗</string>
    <string name="treatment_record">就诊记录</string>
    <string name="firstAid">一键急救</string>
    <string name="firstAidDescribe">紧急情况一键急救</string>
    <string name="ecgRecord">心电监测记录</string>
    <string name="anquanzhongxin">安全中心</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="zhuxiaodenglu">注销登录</string>
    <string name="bangdingshouji">绑定手机</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="remendoctor">热门医生</string>


    <!--activity_add_followup -->
    <string name="addTreatmentFollowup">添加随访记录</string>
    <string name="addTreatmentFollowupDestribe">输入检查结果后，点击提交按钮即可添加随访记录</string>
    <string name="rusuantuoqingmei">乳酸脱氢酶(iu/L)</string>
    <string name="gucaozhuananmei">谷草转氨酶(iu/L)</string>
    <string name="gubingzhuananmei">谷丙转氨酶(iu/L)</string>
    <string name="lingsuanjisuanjimei">磷酸肌酸激酶(iu/L)</string>
    <string name="lingsuanjisuanjimeitonggongmei">磷酸肌酸激酶同工酶(iu/L)</string>
    <string name="jihongdanbai">肌红蛋白(μg/L)</string>
    <string name="jigaidanbai">肌钙蛋白(μg/L)</string>
    <string name="waizhouxuebaixibaozongshu">外周血白细胞总数</string>
    <string name="zhongxinglixibaobilv">中性粒细胞比率</string>
    <string name="pleaseInputCheckResult">请输入检查结果</string>

    <!--activity_chat -->
    <string name="pressSay">按住说话</string>
    <string name="send">SEND</string>
    <string name="image">图片</string>
    <string name="camera">拍照</string>
    <string name="location">位置</string>

    <!--activity_device_list -->
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">查找设备</string>

    <!--activity_ecg_history_patient -->
    <string name="pingjunxinlv">平均心率</string>

    <!--activity_ecg_patient -->
    <string name="connect">连接设备</string>
    <string name="startRecord">开始记录</string>
    <string name="chazhaojilu">查找记录</string>
    <string name="stopRecord">停止记录</string>
    <string name="not_connected">没有连接到设备</string>
    <string name="bt_not_enabled_leaving">蓝牙没有打开，退出程序中</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接到</string>
    <string name="title_not_connected">未连接</string>
    <string name="unable_connect">无法连接设备</string>
    <string name="lost_connection">连接丢失</string>
    <string name="select_device">选择需要连接的设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有发现设备</string>
    <string name="bluetooth_search">搜索蓝牙</string>
    <string name="disconnect">断开连接</string>
    <string name="not_support">该设备不支持蓝牙，强制退出</string>
    <string name="not_open">蓝牙没有打开，程序退出</string>

    <!-- activity_followip -->
    <string name="activity_followup">随访详情</string>

    <!-- activity_healthy_describe_myself_patient -->
    <string name="shifouxiongmen">是否胸闷</string>
    <string name="shifouxinhuang">是否心慌</string>
    <string name="shifouhuxikunnan">是否感觉呼吸困难</string>
    <string name="shifoutouyun">是否头晕</string>
    <string name="shifouquanshenfali">是否全身乏力</string>
    <string name="shuijiaoshishifoubiemen">睡觉时是否憋闷</string>
    <string name="bingqingzishu">病情自述</string>
    <string name="qingwanchengbingqingzishu">请您先完成以下病情自述问卷的填写，完成后才能进行心电图检测</string>

    <!-- activity_healthyrecord_patient -->

    <!-- activity_linechart -->
    <string name="dataTrendChart">数据走势图</string>
    <string name="inspectionItem">检查项目</string>
    <string name="units">单位</string>
    <string name="normalRange">正常范围</string>
    <string name="maxhistory">历史最高</string>
    <string name="minhistory">历史最低</string>
    <string name="lastdata">最近一次</string>

    <!-- activity_login_register -->
    <string name="login">登录</string>
    <string name="passworderror">密码错误</string>
    <string name="loginsucceed">登录成功</string>
    <string name="loginfaild">登录失败</string>
    <string name="account">账号</string>
    <string name="inputphonenumber">请输入手机号</string>
    <string name="password">密码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="register">注册</string>
    <string name="code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="userprotocol">阅读并接受《用户协议》</string>

    <!-- activity_patient_info -->
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="patientinfo">病人信息</string>
    <string name="checkHealthyRecord">查看健康档案</string>

    <!-- activity_set_remind -->
    <string name="receiveNewMsg">接收新消息通知</string>
    <string name="receiveNewMsgDescribe">如果关闭，当你收到新消息时，将不会显示通知提示。</string>
    <string name="vibratorRemind">震动</string>
    <string name="voiceRemind">声音</string>
    <string name="voiceRemindDescribe">当Keeper正在运行时，你可以设置是否需要消息提示音或震动</string>
    <string name="clearCache">清Keeper的缓存空间</string>

    <!-- dialog_about_us -->
    <string name="aboutus">关于我们</string>
    <string name="update">更新</string>
    <string name="aboutApp">关于Keeper</string>
    <string name="AppDescribe">心脏健康的社会关注度已经越来越高，人们身体素质在下降，对于没有医学基础的人来说，认知水平和表达水平上都具有局限性。心脏病具有一过性和突发性的特点，因此，症状消失后的心电图无法作为医生诊断依据，而现有的家庭式实时心电仪，功能单一，仅具备测量功能，无法满足患者就医的需要。
针对这类现象，一款能够实时采集心电特征，数据智能分析，一键挂号复诊的心电系统Keeper应运而生，它因其便携性，易操作性，智能性，平台性的特点， 能够处理病情突发情况的特点，将为广大心脏病患者提供心健康服务，构筑心脏安全后盾！
Keeper系统主要由硬件端心电采集器、手机端APP及网站构成，为用户贴心提供心电检测、健康分析，一键预约，危情速递，询医复诊、病友社区、电子病例库等服务，更好的保护患者的心脏，守卫人们健康！
</string>
    <string name="versionInfo">版本信息</string>
    <string name="versionDescribe">当前版本：1.3.0，适配Android5.0,更多细节优化等你发现！</string>
    <string name="contractUs">联系我们</string>
    <string name="contractUsDescribe">开发团队：四川大学软件学院Hammer\n最近更新：2015年11月16日\n联系我们：www.miomin.com/keeper</string>

    <!-- activity_treatment_followup -->
    <string name="patientName">患者姓名：</string>
    <string name="patientSex">患者性别：</string>
    <string name="patientAge">年龄：</string>
    <string name="patientHeight">身高：</string>
    <string name="patientWeight">体重：</string>
    <string name="treatmentDescribe">就诊详情</string>
    <string name="treatmentDate">就诊日期</string>
    <string name="treatmentHospital">就诊医院</string>
    <string name="treatmentDoctor">就诊医生</string>
    <string name="treatmentAdministraive">诊断科室</string>
    <string name="illnessState">病情诊断</string>

    <!-- administrativeEnum -->
    <string name="NEIKE">内科</string>
    <string name="WAIKE">外科</string>
    <string name="ERKE">儿科</string>
    <string name="JIZHENSHI">急诊室</string>
    <string name="ZHONGYIKE">中医科</string>

    <!-- professionalEnum-->
    <string name="ZHURENYISHI">主任医师</string>
    <string name="FUZHURENYISHI">副主任医师</string>
    <string name="ZHUZHIYISHI">主治医师</string>
    <string name="FUZHUZHIYISHI">副主治医师</string>
    <string name="SHIXIYISHI">实习医师</string>

</resources>
