<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/qianhui" />

    <scu.miomin.com.keeper.myview.MyBanner
        android:id="@+id/myBanner"
        android:layout_width="fill_parent"
        android:layout_height="160dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/qianhui" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/qianhui" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_write_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="openECGActivity"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_ecg" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/ecgmonitor"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:text="@string/ecgmonitorDescribe"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/qianhui"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_write_to_grey"
            android:clickable="true"
            android:onClick="openECGRecordActivity"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_healthy_record" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/healthyRecord"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:text="@string/healthyRecordDescribe"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/qianhui" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_write_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="openTreatmentFollowupActivityForPatient"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_followup" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/treatment_followup"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/treatment_followup_describe"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/qianhui"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_write_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="firstAid"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_first_aid" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/firstAid"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/firstAidDescribe"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/qianhui" />

</LinearLayout>