<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="yjk.huaqibei.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_top_tab_two"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.2"
            android:src="@drawable/icon_back_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/erro_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/icon_erro" />

        <TextView
            android:id="@+id/erro_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/inputphonenumber"
            android:textColor="#f7461c"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edit_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/id_edit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="5"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:hint="@string/inputphonenumber"
            android:singleLine="true"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/id_cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/icon_cancel" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_edit_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pw_edit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="5"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:hint="@string/inputpassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/pw_cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/icon_cancel" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_eye"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/icon_eye_n" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/login_edit_bg"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/code_edit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxEms="4"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_getCode"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login_bg"
            android:enabled="false"
            android:text="@string/getcode"
            android:textColor="#ffffff" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_login_bg"
        android:enabled="false"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/user_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/userprotocol"
        android:textColor="#4883d0"
        android:textSize="15sp" />
</LinearLayout>
