<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/zhuti"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:clickable="true"
            android:gravity="center"
            android:onClick="back">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:onClick="back"
                android:src="@drawable/icon_back_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_three"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:clickable="true"
            android:gravity="center"
            android:onClick="ok"></LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ddd" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#eee"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/receiveNewMsg"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.zcw.togglebutton.ToggleButton
                    android:id="@+id/btn_reciveMessage"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    toggle:borderWidth="0.5dp"
                    toggle:offBorderColor="#eee"
                    toggle:offColor="#ffffff"
                    toggle:onColor="#29bf3b"
                    toggle:spotColor="#ffffff"></com.zcw.togglebutton.ToggleButton>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/receiveNewMsgDescribe"
                android:textColor="#999999"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/vibratorRemind"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.zcw.togglebutton.ToggleButton
                    android:id="@+id/btn_vibrate"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    toggle:borderWidth="0.5dp"
                    toggle:offBorderColor="#eee"
                    toggle:offColor="#ffffff"
                    toggle:onColor="#29bf3b"
                    toggle:spotColor="#ffffff"></com.zcw.togglebutton.ToggleButton>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/voiceRemind"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.zcw.togglebutton.ToggleButton
                    android:id="@+id/btn_voice"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    toggle:borderWidth="0.5dp"
                    toggle:offBorderColor="#eee"
                    toggle:offColor="#ffffff"
                    toggle:onColor="#29bf3b"
                    toggle:spotColor="#ffffff"></com.zcw.togglebutton.ToggleButton>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/voiceRemindDescribe"
                android:textColor="#999999"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_white_to_grey"
            android:onClick="clearBuffer">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/clearCache"
                android:textColor="@color/zhuti"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>